--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -12,6 +12,10 @@
 	<groupId>com.example</groupId>
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
+	<modules>
+		<module>demo</module>
+	</modules>
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -54,7 +58,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.33</version>
+			<version>8.0.26</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
